make the dashboard simple

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/additional.css">
     <link rel="stylesheet" href="/static/css/auth-pages.css">
+    <link rel="stylesheet" href="/static/css/simple-dashboard.css">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
