--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/static/css/auth-pages.css">
     <link rel="stylesheet" href="/static/css/simple-dashboard.css">
     <link rel="stylesheet" href="/static/css/enterprise-login.css">
+    <link rel="stylesheet" href="/static/css/adfs-enhanced.css">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
