fix the sign in button

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,17 @@
     <link rel="stylesheet" href="/static/css/enterprise-login.css">
     <link rel="stylesheet" href="/static/css/adfs-enhanced.css">
     <link rel="stylesheet" href="/static/css/enhanced-header.css">
+    <link rel="stylesheet" href="/static/css/color-enhancements.css">
+    <link rel="stylesheet" href="/static/css/button-improvements.css">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
+    <!-- Decorative floating particles -->
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
     <div class="container">
         <header class="main-header">
             <div class="brand">
