--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -24,9 +24,10 @@
         <!-- Decorative shapes for visual interest -->
         <div class="decorative-shape shape-1"></div>
         <div class="decorative-shape shape-2"></div>
+        <div class="decorative-shape shape-3"></div>
         
         <a href="{% url 'adfs_login' %}" class="enterprise-btn adfs">
-            <i class="fas fa-building"></i>
+            <i class="fas fa-building" aria-hidden="true"></i>
             <span>Sign in with Enterprise Account (ADFS)</span>
         </a>
         
